1.增加后台自动更新天气的功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Weather</string>
+    <string name="forcast_text">预报</string>
+    <string name="forecast_text">预报</string>
 </resources>
